# Silicon-Compiler

./: .gitignore  CMakeLists.txt  README.md  TDD.md
include/: global.h  lexical_analyser.h
src/: lexical_analyser.cc  lexical_analyser.lex  main.cc
tools/decafast/: log
tools/decafast/answer/: decafast  decafast-defs.h  decafast.cc  decafast.lex  decafast.output  decafast.y  default.cc  default.y  global.h  makefile
tools/decafast/output/test/: gcd2.err  multi-var-assign.out
tools/decafast/testcases/dev/: .quicksort.decaf.swp
tools/decaflex/answer/: .gitignore  decaflex  decaflex.lex  global.h  makefile
tools/decaflex/answer/docs/: README.md
